Wed Feb  6 15:46:57 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/Statistics_T.inl:

          Explicitly set the data member values to zero in the
          default constructor.

        * cuts/Traits.h:

          Added include preprocessor definition for "cuts/config.h".

        * integration/test.build:
        * tests/cuts/Statistics_T_Test.cpp:
        * tests/cuts/test.mpc:

          Added unit tests for CUTS_Statistics_T.

Wed Feb  6 02:25:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/cuts/test.mpc:

          Consolidated test projects into a single project file.

        * tests/cuts/Port_Measurement_Test.mpc:
        * tests/cuts/Time_Measurement_Test.mpc:
        * tests/cuts/Timestamp_Metric_Test.mpc:

          Removed these files.

Wed Feb  6 01:26:57 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/cuts/Port_Measurement_Test.cpp:
        * tests/cuts/Time_Measurement_Test.cpp:
        * tests/cuts/Timestamp_Metric_Test.cpp:

          Fixed build errors.

Wed Feb  6 00:53:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/BE_CoWorkEr_Generator.cpp:

          Fixed build errors related to the refactoring of PICML.

Tue Feb  5 19:31:42 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/performance_i.cpp:

          Added a NULL check when extracting metrics into the a
          port metric.

Tue Feb  5 17:04:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/Component_Registry.cpp:

          Removed unused comments.

Tue Feb  5 16:53:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/BDC/svcs/IO/BDC_IO.h:
        * cuts/BDC/svcs/IO/BDC_IO.cpp:

          The component's registration text is buffered before it is
          printed to the screen. This makes it more efficient, and
          reduces the chance of it being mixed with output generated
          by other threads.
